@@ -247,6 +247,14 @@ if the current handler dynamically replaced a previous handler
 then the previous handler will be temporarily restored.
 
 
+### \*random-state\*
+
+Since: 1.4.4
+
+Will initially be `nil`. Will be lazily created by one-arg `random`
+or zero-arg `make-random-state`.
+     
+
 ### REPL variables
     @-, @+, @++, @+++, @\*, @\*\*, @\*\*\*, @/, @//, @///
 
